test/compilable/extra-files/pkg_import3a/mod.d
module pkg_import3a.mod;

int bar() { return 3; }
