test/fail_compilation/fail133.d
template t(int t)
{
}

int main()
{
    return t!(main() + 8);
}
